<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:shrinkColumns="1"
            >

        <TableRow>
            <TextView android:text="@string/key"/>
            <EditText android:id="@+id/key" android:singleLine="true" android:inputType="none"/>
        </TableRow>

        <TableRow>
            <TextView android:text="@string/name"/>
            <EditText android:id="@+id/name" android:singleLine="true" android:inputType="text"/>
        </TableRow>

        <TableRow>
            <TextView android:text="@string/runtimeName"/>
            <EditText android:id="@+id/runtimeName" android:singleLine="true" android:inputType="text"/>
        </TableRow>

        <Button android:id="@+id/done"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/done"
                />

    </TableLayout>

</ScrollView>